baml_language/crates/baml_tests/snapshots/parser_error_recovery/baml_tests__parser_error_recovery__01_lexer__invalid_syntax.snap
---
source: target/debug/build/baml_tests-cb4594c533e23a52/out/generated_tests.rs
expression: output
---
Word "class"
Integer "123"
Word "Invalid"
LBrace "{"
Slash "/"
Slash "/"
Word "Invalid"
Word "class"
Word "name"
Word "field"
Word "string"
RBrace "}"
Word "enum"
Word "Status"
LBrace "{"
Word "ACTIVE"
Word "INACTIVE"
Word "PENDING"
Slash "/"
Slash "/"
Word "Two"
Word "values"
Word "on"
Word "one"
Word "line"
RBrace "}"
Word "function"
Word "Foo"
LParen "("
RParen ")"
Arrow "->"
LBrace "{"
Slash "/"
Slash "/"
Word "Missing"
Word "return"
Word "type"
Word "client"
Word "GPT4"
RBrace "}"
