baml_language/crates/baml_tests/snapshots/parser_error_recovery/baml_tests__parser_error_recovery__01_lexer__missing_braces.snap
---
source: target/debug/build/baml_tests-cb4594c533e23a52/out/generated_tests.rs
expression: output
---
Word "class"
Word "User"
LBrace "{"
Word "name"
Word "string"
Slash "/"
Slash "/"
Word "Missing"
Word "closing"
Word "brace"
Word "class"
Word "Another"
LBrace "{"
Slash "/"
Slash "/"
Word "Should"
Word "still"
Word "parse"
Word "this"
Word "class"
Word "field"
Word "int"
RBrace "}"
