baml_language/crates/baml_tests/snapshots/parser_error_recovery/baml_tests__parser_error_recovery__01_lexer__partial_input.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
Slash "/"
Slash "/"
Word "Test"
Word "parser"
Word "recovery"
With "with"
Word "partial"
Slash "/"
Word "incomplete"
Word "input"
Class "class"
Word "Partial"
LBrace "{"
Word "field1"
Word "str"
Slash "/"
Slash "/"
Word "Incomplete"
Word "type"
Word "name"
Word "field2"
Slash "/"
Slash "/"
Word "Missing"
Word "type"
Word "entirely"
Word "field3"
Word "string"
At "@"
Slash "/"
Slash "/"
Word "Incomplete"
Word "attribute"
Word "field4"
Word "string"
At "@"
Word "alias"
LParen "("
Slash "/"
Slash "/"
Word "Unclosed"
Word "attribute"
Word "field5"
Word "string"
Slash "/"
Slash "/"
Word "This"
Word "should"
Break "break"
Word "as"
Error "`"
Word "field5"
Error "`"
Word "is"
Word "treated"
Word "as"
Word "part"
Word "of"
Word "the"
Word "attribute"
RBrace "}"
Function "function"
Word "Incomplete"
LParen "("
Slash "/"
Slash "/"
Word "Missing"
Word "parameters"
Word "closing"
Word "param1"
Colon ":"
Word "string"
Function "function"
Word "NextFunction"
LParen "("
RParen ")"
Arrow "->"
Word "string"
LBrace "{"
Slash "/"
Slash "/"
Word "Should"
Word "still"
Word "parse"
Word "this"
Return "return"
Quote "\""
Word "parsed"
Quote "\""
RBrace "}"
Enum "enum"
Slash "/"
Slash "/"
Word "Missing"
Enum "enum"
Word "name"
Word "VALUE1"
Word "VALUE2"
RBrace "}"
Enum "enum"
Word "ValidEnum"
LBrace "{"
Slash "/"
Slash "/"
Word "Should"
Word "parse"
Word "this"
Word "OPTION1"
Word "OPTION2"
RBrace "}"
