baml_language/crates/baml_tests/snapshots/parser_error_recovery/baml_tests__parser_error_recovery__01_lexer__unclosed_string.snap
---
source: target/debug/build/baml_tests-cb4594c533e23a52/out/generated_tests.rs
expression: output
---
Word "class"
Word "Test"
LBrace "{"
Word "field1"
Word "string"
At "@"
Word "alias"
LParen "("
Quote "\""
Word "closed"
Word "string"
Quote "\""
RParen ")"
Word "field2"
Word "string"
At "@"
Word "alias"
LParen "("
Quote "\""
Word "unclosed"
Word "string"
Word "field3"
Word "string"
At "@"
Word "alias"
LParen "("
Quote "\""
Word "another"
Word "closed"
Word "string"
Quote "\""
RParen ")"
Slash "/"
Slash "/"
Word "Should"
Word "still"
Word "parse"
Word "this"
RBrace "}"
